--- a/index.html
+++ b/index.html
@@ -45,15 +45,9 @@
         <div class="icon"></div>
         <div class="text">Submit</div>
       </div>
-      <div class="message_input_wrapper">
-      </div>
-      <div class="upload_image">
-        <div class="icon"></div>
-        <div class="text"><i class="fa fa-microphone"></i></div>
-      </div>
+
     </div>
-    <ul class="images">
-      
+    <ul class="images" id=img_home>
     </ul>
   <!-- </div> -->
   <div class="message_template">
